Adding comments to the code in all relevant jupyter notebooks

--- a/CES Employment Data.ipynb
+++ b/CES Employment Data.ipynb
@@ -52,26 +52,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-06-04T03:07:15.909198Z",
-     "start_time": "2020-06-04T03:07:08.395177Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100% [............................................................] 2920 / 2920"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Check if file has ben downloaded if not download the file\n",
     "# This could take a while first time downloading the files (over 5 mins)\n",
-    "# Does this qualify as web scraping? :-)\n",
+    "\n",
     "CESFileName = 'resources/AllCESSeries.txt'\n",
     "SeriesFileName = 'resources/CESSeries.txt'\n",
     "IndustryFileName = 'resources/CESIndustries.txt'\n",
@@ -96,8 +83,7 @@
     "    url = \"https://download.bls.gov/pub/time.series/ce/ce.datatype\"    \n",
     "    wget.download(url,DataTypeCodesFileName)  \n",
     "    \n",
-    "\n",
-    "allCES =  pd.read_table(CESFileName, sep='\\t', header=0,names=['series_id', 'year', 'period', 'value', 'footnote_codes'])    \n",
+    "    allCES =  pd.read_table(CESFileName, sep='\\t', header=0,names=['series_id', 'year', 'period', 'value', 'footnote_codes'])    \n",
     "\n",
     "seriesDF =  pd.read_table(SeriesFileName, sep='\\t', header=0,\n",
     "                          names=['series_id', 'supersector_code','industry_code','data_type_code', 'seasonal', 'series_title', 'footnote_codes','begin_year', 'begin_period', 'end_year', 'end_period'],\n",
@@ -116,7 +102,7 @@
     "\n",
     "#Clean up spaces on the series_id\n",
     "allCES['series_id'] = allCES['series_id'].str.strip()\n",
-    "seriesDF['series_id'] = seriesDF['series_id'].str.strip()\n"
+    "seriesDF['series_id'] = seriesDF['series_id'].str.strip()"
    ]
   },
   {
@@ -133,8 +119,7 @@
     "# Split Industry from Series ID\n",
     "allCES['industry_code'] = allCES['series_id'].str.slice(3,11)\n",
     "\n",
-    "seriesDF.drop(['begin_year', 'begin_period', 'end_year', 'end_period'],1,inplace=True)\n",
-    "\n"
+    "seriesDF.drop(['begin_year', 'begin_period', 'end_year', 'end_period'],1,inplace=True)"
    ]
   },
   {
@@ -257,7 +242,7 @@
    "source": [
     "# Merge with Series DF\n",
     "CES2020DF = pd.merge(CES2020DF,seriesDF,on='series_id',how='left')\n",
-    "CES2020DF.shape\n"
+    "CES2020DF.shape"
    ]
   },
   {
@@ -282,7 +267,7 @@
     }
    ],
    "source": [
-    "# Merge with SupoerSector DF\n",
+    "# Merge with SuperSector DF\n",
     "CES2020DF = pd.merge(CES2020DF,SuperSectorDF,on='supersector_code',how='left')\n",
     "CES2020DF.shape"
    ]
@@ -343,8 +328,7 @@
     "condition = CES2020DF['data_type_code'].isin(['01','10'])\n",
     "CES2020DF = CES2020DF[condition]\n",
     "\n",
-    "CES2020DF.shape\n",
-    "\n"
+    "CES2020DF.shape"
    ]
   },
   {
@@ -360,7 +344,7 @@
    "source": [
     "#CES2020DF.columns\n",
     "\n",
-    "CES2020DF.drop(['seasonal','footnote_codes_x','naics_code','industry_name','display_level','selectable','sort_sequence','industry_code_y','footnote_codes_y','publishing_status'],1,inplace=True)\n"
+    "CES2020DF.drop(['seasonal','footnote_codes_x','naics_code','industry_name','display_level','selectable','sort_sequence','industry_code_y','footnote_codes_y','publishing_status'],1,inplace=True)"
    ]
   },
   {
@@ -427,8 +411,7 @@
    ],
    "source": [
     "CES2020DF = pd.merge(CES2020DF,seriesShortDF,on='series_id',how='left')\n",
-    "CES2020DF.shape\n",
-    "\n"
+    "CES2020DF.shape"
    ]
   },
   {
@@ -476,13 +459,6 @@
     "# to load Picke file use the following once pickle has been generated\n",
     "CES2020DF_2=pd.read_pickle('resources/CES2020.pkl',compression='gzip')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
