--- a/Census Data.ipynb
+++ b/Census Data.ipynb
@@ -11,11 +11,11 @@
    },
    "outputs": [],
    "source": [
-    "#https://www.census.gov/data/datasets/time-series/demo/popest/2010s-state-total.html#par_textimage_500989927\n",
+    "# Dependencies and Setup\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import os\n",
-    "from sqlalchemy import create_engine\n"
+    "from sqlalchemy import create_engine"
    ]
   },
   {
@@ -171,11 +171,10 @@
     }
    ],
    "source": [
+    "# File to Load\n",
     "CensusFileName=\"resources/nst-est2019-01.csv\"\n",
-    "\n",
     "CensusDF =  pd.read_csv(CensusFileName, header=0)    \n",
-    "\n",
-    "CensusDF.head()\n"
+    "CensusDF.head()"
    ]
   },
   {
@@ -189,7 +188,7 @@
    },
    "outputs": [],
    "source": [
-    "# default 2020 to same values to 2019\n",
+    "# Default 2020 data to same values as 2019 since 2020 census data is not yet available\n",
     "CensusDF['2020'] = CensusDF['2019']"
    ]
   },
@@ -279,6 +278,7 @@
     }
    ],
    "source": [
+    "# Generate a new dataframe re-orienting the original dataframe using pd.melt\n",
     "df = pd.melt(CensusDF, id_vars=['state'], value_vars=['2015','2016','2017','2018','2019','2020'])\n",
     "df.head()"
    ]
@@ -322,16 +322,10 @@
    },
    "outputs": [],
    "source": [
+    "# Connect to SQLLite database\n",
     "engine = create_engine('sqlite:///resources/us_unemployment.db', echo=False)\n",
     "df.to_sql('census',con=engine,if_exists='replace')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
