--- a/Explore & Clean_Demographic Data.ipynb
+++ b/Explore & Clean_Demographic Data.ipynb
@@ -546,7 +546,7 @@
     }
    ],
    "source": [
-    "# Create a new df with filtered series IDs\n",
+    "# Create a new dataframe with filtered series IDs\n",
     "condition = LNSDF['series_id'].isin(series)\n",
     "LNSSeriesDF = LNSDF[condition]\n",
     "LNSSeriesDF.head()"
@@ -842,6 +842,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Rename to more meaningful and shorter column names/categories\n",
     "unemp_df['category'].replace({\"(Seas) Civilian Labor Force Level\":\"Labor Force Total\",\n",
     "                                  \"(Seas) Civilian Labor Force Level - Men\":\"Labor Force Men\",\n",
     "                                  \"(Seas) Civilian Labor Force Level - Women\":\"Labor Force Women\",\n",
@@ -926,7 +927,7 @@
     }
    ],
    "source": [
-    "# See updated categories\n",
+    "# Verify updated categories\n",
     "unemp_df['category'].value_counts()"
    ]
   },
@@ -938,98 +939,8 @@
    "source": [
     "# Export clean data to CSV for analysis\n",
     "output_file = \"Resources/Demographics_Data.csv\"\n",
-    "unemp_df.to_csv(output_file, index=False)\n",
-    "\n",
-    "#mode='a'"
+    "unemp_df.to_csv(output_file, index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-06-03T17:09:29.544751Z",
-     "start_time": "2020-06-03T17:09:29.514756Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# get Unemployment level\n",
-    "# LNS13000000 all\n",
-    "# LNS13000001 Men\n",
-    "# LNS13000002  Women\n",
-    "#condition = LNSDF['series_id'].isin(['LNS13000000','LNS13000001','LNS13000002'])\n",
-    "#allUnemploymentDF = LNSDF[condition]\n",
-    "#allUnemploymentDF.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-06-03T17:09:29.591749Z",
-     "start_time": "2020-06-03T17:09:29.546739Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "#df = allUnemploymentDF[['series_id','year','Month','value']]\n",
-    "#df['date']=df['year'].astype(str) + \"-\"+ df['Month'].astype(str) \n",
-    "#df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-06-03T17:09:29.637735Z",
-     "start_time": "2020-06-03T17:09:29.594755Z"
-    },
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "#df = pd.pivot_table(df,index=['date'],values=['value'],columns=['series_id'])\n",
-    "#df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-06-03T17:09:29.653739Z",
-     "start_time": "2020-06-03T17:09:29.644735Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "#df.reset_index(inplace=True)\n",
-    "#df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-06-03T17:09:30.230750Z",
-     "start_time": "2020-06-03T17:09:29.656738Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "#ax = df.plot(xticks=df.index)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
