--- a/Explore & Clean_Industry Data.ipynb
+++ b/Explore & Clean_Industry Data.ipynb
@@ -718,7 +718,7 @@
     }
    ],
    "source": [
-    "# Rename short_title categories\n",
+    "# Rename to more meaningful short_title categories\n",
     "df['industry']=df['short_title'].replace({\n",
     "        'All employees':'All Employees',\n",
     "        'All employees accommodation and food services':'Accomm. & Food Services',\n",
@@ -876,17 +876,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Push to SQLite\n",
+    "# Push to SQLite Database\n",
     "engine = create_engine('sqlite:///Resources/Industry_Data.db', echo=False)\n",
     "final_df.to_sql('industry_data',con=engine,if_exists='replace')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
