--- a/Explore_&_Clean_States.ipynb
+++ b/Explore_&_Clean_States.ipynb
@@ -169,74 +169,7 @@
     }
    ],
    "source": [
-    "# Check for correct data types - need to convert\n",
-    "df.dtypes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-06-08T01:26:40.948368Z",
-     "start_time": "2020-06-08T01:26:40.934370Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# # Remove commas from columns to be able to cast as a number\n",
-    "# df[\"Initial Claims\"] = df[\"Initial Claims\"].str.replace(',', '')\n",
-    "# df[\"Continued Claims\"] = df[\"Continued Claims\"].str.replace(',', '')\n",
-    "# df[\"Covered Employment\"] = df[\"Covered Employment\"].str.replace(',', '')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-06-08T01:26:40.964368Z",
-     "start_time": "2020-06-08T01:26:40.952369Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# # Convert data types\n",
-    "# df['Initial Claims'] = pd.to_numeric(df['Initial Claims'])\n",
-    "# df['Continued Claims'] = pd.to_numeric(df['Continued Claims'])\n",
-    "# df['Covered Employment'] = pd.to_numeric(df['Covered Employment'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-06-08T01:26:40.979367Z",
-     "start_time": "2020-06-08T01:26:40.968369Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "state                                object\n",
-       "filed_week_ended             datetime64[ns]\n",
-       "initial_claim                         int32\n",
-       "reflecting_week_ended        datetime64[ns]\n",
-       "continued_claims                      int32\n",
-       "covered_employment                    int32\n",
-       "insured_unemployment_rate           float32\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Verify adjusted data types\n",
+    "# Check for correct data types\n",
     "df.dtypes"
    ]
   },
@@ -264,7 +197,7 @@
     }
    ],
    "source": [
-    "# Check column names for spaces - looks good\n",
+    "# Check column names for spaces\n",
     "df.columns"
    ]
   },
@@ -345,7 +278,7 @@
     }
    ],
    "source": [
-    "# Verify dropped rows\n",
+    "# Verify dropped rows if any\n",
     "df.count()"
    ]
   },
@@ -570,9 +503,10 @@
    },
    "outputs": [],
    "source": [
+    "# Add two more columns to the dataframe for displaying filed month and year separately\n",
     "df['month'] = df['filed_week_ended'].dt.month.map(\"{:02}\".format)\n",
     "df['year'] = df['filed_week_ended'].dt.year.astype(str)\n",
-    "df['year_month'] = df['year'] + \"-\" + df['month']\n"
+    "df['year_month'] = df['year'] + \"-\" + df['month']"
    ]
   },
   {
@@ -837,6 +771,7 @@
     }
    ],
    "source": [
+    "# Rename the columns and generate a new dataframe aggregating all the weekly claims to a month, per state\n",
     "d = { 'average_continued_claims':'continued_claims','insured_unemployment_rate':'average_insured_unemployment_rate'}\n",
     "df_3 = df.groupby(['state','year_month','year','month']).agg({'initial_claim':'sum','continued_claims':'mean','insured_unemployment_rate':'mean'}).rename(columns=d).reset_index()\n",
     "df_3.head()"
@@ -853,18 +788,12 @@
    },
    "outputs": [],
    "source": [
+    "# Push to SQLite Database\n",
     "from sqlalchemy import create_engine\n",
     "\n",
     "engine = create_engine('sqlite:///resources/us_unemployment.db', echo=False)\n",
     "df_3.to_sql('state_claims',con=engine,if_exists='replace')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
