--- a/Explore_&_Clean_States_Carlos.ipynb
+++ b/Explore_&_Clean_States_Carlos.ipynb
@@ -169,74 +169,7 @@
     }
    ],
    "source": [
-    "# Check for correct data types - need to convert\n",
-    "df.dtypes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-06-07T01:34:10.338037Z",
-     "start_time": "2020-06-07T01:34:10.312040Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# # Remove commas from columns to be able to cast as a number\n",
-    "# df[\"Initial Claims\"] = df[\"Initial Claims\"].str.replace(',', '')\n",
-    "# df[\"Continued Claims\"] = df[\"Continued Claims\"].str.replace(',', '')\n",
-    "# df[\"Covered Employment\"] = df[\"Covered Employment\"].str.replace(',', '')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-06-07T01:34:10.353034Z",
-     "start_time": "2020-06-07T01:34:10.341035Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# # Convert data types\n",
-    "# df['Initial Claims'] = pd.to_numeric(df['Initial Claims'])\n",
-    "# df['Continued Claims'] = pd.to_numeric(df['Continued Claims'])\n",
-    "# df['Covered Employment'] = pd.to_numeric(df['Covered Employment'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-06-07T01:34:10.368035Z",
-     "start_time": "2020-06-07T01:34:10.362036Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "state                                object\n",
-       "filed_week_ended             datetime64[ns]\n",
-       "initial_claim                         int32\n",
-       "reflecting_week_ended        datetime64[ns]\n",
-       "continued_claims                      int32\n",
-       "covered_employment                    int32\n",
-       "insured_unemployment_rate           float32\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Verify adjusted data types\n",
+    "# Check for correct data types\n",
     "df.dtypes"
    ]
   },
@@ -264,7 +197,7 @@
     }
    ],
    "source": [
-    "# Check column names for spaces - looks good\n",
+    "# Check column names for spaces \n",
     "df.columns"
    ]
   },
@@ -345,7 +278,7 @@
     }
    ],
    "source": [
-    "# Verify dropped rows\n",
+    "# Verify dropped rows if any\n",
     "df.count()"
    ]
   },
@@ -676,7 +609,7 @@
     }
    ],
    "source": [
-    "df.head()\n"
+    "df.head()"
    ]
   },
   {
@@ -690,16 +623,10 @@
    },
    "outputs": [],
    "source": [
+    "# Add two more columns to the dataframe for displaying filed month and year separately\n",
     "df['filed_ended_month'] = df['filed_week_ended'].dt.month.map(\"{:02}\".format)\n",
     "df['filed_ended_year'] = df['filed_week_ended'].dt.year.astype(str)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -842,13 +769,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
@@ -958,6 +878,7 @@
     }
    ],
    "source": [
+    "# Rename the columns and generate a new dataframe aggregating all the weekly claims to a month, per state\n",
     "d = {'initial_claim':'monthly_initial_claim', 'average_continued_claims':'continued_claims','insured_unemployment_rate':'average_insured_unemployment_rate'}\n",
     "df_3 = df.groupby(['state','filed_ended_year','filed_ended_month']).agg({'initial_claim':'sum','continued_claims':'mean','insured_unemployment_rate':'mean'}).rename(columns=d).reset_index()\n",
     "df_3.head()"
@@ -1028,6 +949,7 @@
     }
    ],
    "source": [
+    "# Generate test plots\n",
     "df_3['year-month'] =  df_3['filed_ended_year'] + \"-\" + df_3['filed_ended_month']\n",
     "df_3= df_3.sort_values(['state','year-month'])\n",
     "condition = (df_3['state']=='Texas') & (df_3['filed_ended_year'].isin(['2020']))\n",
@@ -1156,13 +1078,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
@@ -1172,6 +1087,7 @@
    },
    "outputs": [],
    "source": [
+    "# Generate a new dataframe by re-orienting the original data frame using pd.melt\n",
     "df_2 = pd.melt(df,id_vars=['state','filed_week_ended'],value_vars=['initial_claim','continued_claims','covered_employment','insured_unemployment_rate'])"
    ]
   },
@@ -1301,10 +1217,10 @@
    },
    "outputs": [],
    "source": [
-    "# import dtale # data Frame visualization\n",
-    "\n",
+    "# Visualize the dataframe\n",
+    "# import dtale \n",
     "# d = dtale.show(df_3, ignore_duplicate=True)\n",
-    "# d.open_browser()\n"
+    "# d.open_browser()"
    ]
   },
   {
@@ -1323,7 +1239,7 @@
     "    render_template,\n",
     "    jsonify,\n",
     "    request,\n",
-    "    redirect)\n"
+    "    redirect)"
    ]
   },
   {
@@ -1376,13 +1292,6 @@
     "\n",
     "jsonify(data)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1401,7 +1310,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
