--- a/LN  Data.ipynb
+++ b/LN  Data.ipynb
@@ -74,7 +74,7 @@
    "source": [
     "# Check if file has ben downloaded if not download the file\n",
     "# This could take a while first time downloading the files (over 5 mins)\n",
-    "# Does this qualify as web scraping? :-)\n",
+    "\n",
     "lnFileName = 'resources/ALLlnSeries.txt'\n",
     "lnSeriesFileName = 'resources/lnSeries.txt'\n",
     "lnIndustryFileName = 'resources/lnIndustries.txt'\n",
@@ -137,8 +137,7 @@
     "# CES Seasonally Adjusted\n",
     "condition = allLN['year'].isin([2015,2016,2017,2018,2019,2020])  & allLN['period'].str.startswith('M')\n",
     "LNS2020DF = allLN[condition]\n",
-    "LNS2020DF.shape\n",
-    "\n"
+    "LNS2020DF.shape"
    ]
   },
   {
@@ -216,7 +215,7 @@
    "source": [
     "# Merge with Series DF\n",
     "LNS2020DF = pd.merge(LNS2020DF,LNSeriesDF,on='series_id',how='left')\n",
-    "LNS2020DF.shape\n"
+    "LNS2020DF.shape"
    ]
   },
   {
@@ -299,28 +298,11 @@
     }
    ],
    "source": [
-    "\n",
+    "# Determine all the series of interest\n",
     "Series_of_interest = [\n",
     "    'LNS11000000', # Labor Force \n",
     "    'LNS11000001', # Labor Force Level Men\n",
     "    'LNS11000002', # Labor Force Level Women\n",
-    "#     'LNS11000003', # Race White\n",
-    "#     'LNS11000006', # Black or African American\n",
-    "#     'LNS11032183', # Asian\n",
-    "#     'LNS11000009', # Hispanic or Latino\n",
-    "#     'LNS11000012', # 16-19\n",
-    "#     'LNS11000024', # 20 years & older\n",
-    "#     'LNS11300036', # 20-24\n",
-    "#     'LNS11300089', # 25-34\n",
-    "#     'LNS11300091', # 35-44\n",
-    "#     'LNS11300093', # 45-54\n",
-    "#     'LNS11324230', # 55 and over\n",
-    "    \n",
-    "#     'LNS11327659', # Less than HS\n",
-    "#     'LNS11327660', # HS No college\n",
-    "#     'LNS11327662', # Bachelor's degree and higher\n",
-    "#     'LNS11327689', #Some College or Associate Degree\n",
-    "#     'LNS12000000', # Employment Level\n",
     "    \n",
     "    'LNS13000000', # Unemployment Level\n",
     "    'LNS13000001', # Unemployment Level Men\n",
@@ -345,8 +327,6 @@
     "    'LNS13008516', # Number Unemployed for 15 Weeks & over\n",
     "    'LNS13008876', # Number Unemployed for 15-26 Weeks\n",
     "    'LNS13008636', # Number Unemployed for 27 Weeks & over\n",
-    "#    'LNS13008275', # Average Weeks Unemployed\n",
-    "#    'LNS13008276', # Median Weeks Unemployed\n",
     "    \n",
     "    'LNS13023569', # Unemployment Level - New Entrants\n",
     "    'LNS13023621', # Unemployment Level - Job Losers\n",
@@ -374,6 +354,7 @@
    },
    "outputs": [],
    "source": [
+    "# Explore the dataframe\n",
     "# d = dtale.show(LNS2020DF, ignore_duplicate=True)\n",
     "# d.open_browser()"
    ]
@@ -417,16 +398,9 @@
    },
    "outputs": [],
    "source": [
-    "# to load Picke file use the following once pickle has been generated\n",
+    "# To load Picke file use the following once pickle has been generated\n",
     "LNS2020DF_2=pd.read_pickle('resources/LNS2020.pkl',compression='gzip')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
